--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+    <%= link_to "Athletes Den", root_path %>
     <%= yield %>
   </body>
 </html>
