--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-div.
-<h1>Workout Lounge!</h1>
+<div class="jumbotron">
+  <h1>Workout Lounge!</h1>
 
-<p>Show off your Workout!</p>
+  <p>Show off your Workout!</p>
+</div>
