--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,11 +22,17 @@ data-target="#bs-example-navbar-collapse-1">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <%= link_to "Home", root_path, class: "navbar-brand" %>
           </div>
           <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li class="active"><%= link_to "Athletes Den", root_path %></li>
+            <%= link_to "Home", root_path, class: "navbar-brand" %>
+            <ul class="nav navbar-nav navbar-right">
+              <% unless user_signed_in? %>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
+              <% else %>
+                <p class="navbar-text"><%= "Signed in as #{current_user.email}" %></p>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+              <% end %>
             </ul>
           </div>
         </div>
