--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,12 @@ data-target="#bs-example-navbar-collapse-1">
           <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
             <%= link_to "Home", root_path, class: "navbar-brand" %>
             <ul class="nav navbar-nav navbar-right">
-              <% unless user_signed_in? %>
-                <li><%= link_to "Sign up", new_user_registration_path %></li>
-                <li><%= link_to "Sign in", new_user_session_path %></li>
-              <% else %>
+              <% if user_signed_in? %>
                 <p class="navbar-text"><%= "Signed in as #{current_user.email}" %></p>
                 <li><%= link_to "Sign out", destroy_user_session_path, method: :delete %></li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path %></li>
+                <li><%= link_to "Sign in", new_user_session_path %></li>
               <% end %>
             </ul>
           </div>
