arranged styling of error messagess

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 body{
-  margin-top: 80px;
+  margin-top: 90px;
 }
 
 //navbar styling
@@ -40,4 +40,19 @@ body{
 
 .navbar-default .navbar-nav li > a:hover {
   color: #ff3535;
+}
+
+//devise error messages
+
+
+#error_explanation {
+background-color: #f2dede;
+color: #a94442;
+text-align: left;
+padding: 5px 20px;
+margin-bottom: 30px;
+}
+
+#error_explanation h2 {
+font-size: 150%;
 }
