--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" id='footer'>
   <div class="row">
-    <div class="col-md-10 text-center">
+    <div class="col-md-12 text-center">
       <div role='contentinfo'>
         <p>Let's make friends</p>
       </div>
