--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= javascript_pack_tag 'application' %>
@@ -15,6 +16,5 @@
     <%= render 'shared/header' %>
     <%= render 'shared/main' %>
     <%= render 'shared/footer' %>
-
   </body>
 </html>
