--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -34,7 +34,7 @@
   <br>
 
   <div class="col-xs-12 col-md-10 well member">
-    <%= link_to 'Back', user_exercise_path(current_user),
+    <%= link_to 'Back', user_exercises_path,
     class: 'btn btn-success btn-lg link', id: 'back-btn' %>
   </div>
 </div>
